--- a/.gitconfig
+++ b/.gitconfig
@@ -2,6 +2,8 @@
 	name = Clive Evans
 	email = cliveevans@ntlworld.com
 [alias]
+   co = checkout
+   last = log-1 HEAD
    unstage = reset HEAD
    rollback = reset --hard HEAD^ ; rolls back the last commit
    pop = stash pop
